<resources>
    <string name="app_name">PhoenixPlan</string>
    <string name="action_settings">Settings</string>
    <!-- FAB -->
    <string name="fab_description">Add</string>
    <!-- Timeline -->
    <string name="late">Late</string>
    <string name="timeline_object_event_time_format">%1$s - %2$s</string>
    <!-- Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- Create Timeline Object Dialog -->
    <string name="create_new">New</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="object_name">Name</string>
    <string name="event_type">Event</string>
    <string name="deadline_type">Deadline</string>
    <string name="object_time_from_text">from</string>
    <string name="object_time_from_text_alt">on</string>
    <string name="object_time_to_text">to</string>
    <string name="object_time_at">at</string>
    <string name="object_description">Description</string>
    <string name="object_importance">Importance</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="missing_name">A name is required.</string>
    <string name="invalid_date">The second date/time combination must be after the first combination.</string>
    <string name="required_error">Required</string>
    <!-- Delete Dialog -->
    <string name="delete">Delete</string>
    <string name="are_you_sure_dialog">Are you sure you want to delete this? This operation cannot be undone.</string>
    <!-- Settings -->
    <string name="settings_general">General</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_show_late_deadlines_separately">Separate Late Deadlines</string>
    <string name="settings_show_late_deadlines_separately_description">This highlights late deadlines by moving them to a separate section.</string>
    <string name="settings_debugging">Debugging</string>
    <string name="settings_reschedule_notifications">Reschedule Notifications</string>
    <!-- Notifications -->
    <string name="notifications_event_1_hour">Starting in 1 hour!</string>
    <string name="notifications_event_30_minutes">Starting in 30 minutes!</string>
    <string name="notifications_event_5_minutes">Starting in 5 minutes!</string>
    <string name="notifications_event_now">Event in progress!</string>
    <string name="notifications_event_ended">Event has ended.</string>
    <string name="notifications_deadline_1_hour">Due in 1 hour!</string>
    <string name="notifications_deadline_30_minutes">Due in 30 minutes!</string>
    <string name="notifications_deadline_5_minutes">Due in 5 minutes!</string>
    <string name="notifications_deadline_now">Due now!</string>
    <string name="notifications_channel_name">Reminders</string>
</resources>