<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_general">

        <ListPreference
            app:key="dark_mode"
            app:title="@string/settings_dark_mode"
            app:entries="@array/settings_dark_mode_entries"
            app:entryValues="@array/settings_dark_mode_values"
            app:defaultValue="@string/settings_dark_mode_default"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            app:key="show_late_deadlines_separately"
            app:title="@string/settings_show_late_deadlines_separately"
            app:summary="@string/settings_show_late_deadlines_separately_description"
            app:defaultValue="@bool/settings_show_late_deadlines_separately_default"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_debugging">

        <Preference
            app:key="reschedule_notifications"
            app:title="@string/settings_reschedule_notifications"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>