<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/object_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/object_name"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/object_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/object_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/object_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:gravity="center"
            app:checkedButton="@id/object_event_type"
            app:layout_constraintBottom_toTopOf="@+id/object_importance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/object_name"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_event_type"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_deadline_type"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline_type" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/object_importance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/object_importance"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/object_type"
            app:layout_constraintBottom_toTopOf="@id/object_time_from">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/object_importance_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/object_importance"
                android:text="@string/object_importance_normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/object_time_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/object_importance"
            app:layout_constraintBottom_toTopOf="@id/object_time_to">

            <TextView
                android:id="@+id/object_time_from_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dialog_padding"
                android:text="@string/object_time_from_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_time_from_date"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:text="TBD"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_padding"
                android:layout_marginEnd="@dimen/dialog_padding"
                android:text="@string/object_time_at" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_time_from_time"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:text="TBD"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/object_time_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/object_time_from"
            app:layout_constraintBottom_toTopOf="@id/object_description">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dialog_padding"
                android:text="@string/object_time_to_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_time_to_date"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:text="TBD"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dialog_padding"
                android:layout_marginEnd="@dimen/dialog_padding"
                android:text="@string/object_time_at" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/object_time_to_time"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:minWidth="0dp"
                android:layout_height="wrap_content"
                android:text="TBD"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/object_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/object_description"
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_marginBottom="@dimen/dialog_padding"
            android:layout_marginStart="@dimen/dialog_padding"
            android:layout_marginEnd="@dimen/dialog_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/object_time_to"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/object_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>